@@ -8,4 +8,6 @@
 - (int)expandFiles:(NSArray *)files withPathInfo:(BOOL)usePathInfo toPath:(NSString *)path;
 - (NSArray *)listContents;
 
++ (void)createArchive:(NSString *)archivePath withFiles:(NSArray *)filenames archiveType:(NSString *) archiveType;
+
 @end
