@@ -1,3 +1,8 @@
+2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* ZipArchive.m remove a bogus check, and fix comment
+	* ArchiveService.[h|m], ZipperInfo.plist, LhaArchive.[h|m]
+	  Add creation of LHA Archives
+
 2012-12-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* ArchiveService.[h|m], TarArchive.[h|m]
 	* Allow creating of tar.gz and tar.bz2 archives
